# CURATO-OPIOID

./: .gitignore  LICENSE  README.md  REPO_BUILD_NOTES.md  pyproject.toml  requirements.txt
config/: pharmacology_ontology.json
data/: README.md
data/fully_pooled/development/: curated_wide.csv
expected_outputs/: fully_pooled_vs_stratified_external_contrast.csv  fully_pooled_vs_stratified_external_contrast.md
pipeline/: benchmark.py  compare.py  curate.py
scripts/: run_quick_check.sh  sanitize_curated_csv.py
src/opioid_ref/: __init__.py  benchmark.py  compare.py  ontology.py
