[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opioid-stratified-bioactivity-reference"
version = "0.1.0"
description = "Reference implementation for opioid bioactivity stratification and QSAR benchmarking."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "CC BY-NC 4.0"}
authors = [
  {name = "Khaled Elokely"}
]
dependencies = [
  "numpy==2.4.4",
  "pandas==3.0.2",
  "rdkit==2024.9.4",
  "scikit-learn==1.8.0",
  "xgboost==3.2.0",
  "lightgbm==4.6.0",
  "shap==0.47.2",
]

[tool.setuptools.packages.find]
where = ["src"]
